--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"*.c": "c",
 		"minishell.h": "c",
-		"type_traits": "c"
-	}
+		"type_traits": "c",
+		"history.h": "c"
+	},
+	"C_Cpp.errorSquiggles": "disabled"
 }
